# DrinkCreator6000

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CustomDataTypes.h  Custom_Linker.ld  Doxyfile  DrinkCreator6000.ino  DrinkCreator6000_Config.cpp  DrinkCreator6000_Config.h  DrinkCreator6000_DataTypes.h  DrinkCreator6000_Init.cpp  DrinkCreator6000_Init.h  DrinkCreator6000_Tasks.h  EEPROM_Management.h  LICENSE  LcdCharacters.h  README.md  build.ninja  cmake_install.cmake  compile_commands.json  taskErrorHandler.cpp  taskMain.cpp  taskMain.h  taskOrderDrink.cpp  taskOrderDrink.h  taskReadInput.cpp  taskReadTemp.h  taskSelectDrink.cpp  taskSerialInput.cpp  taskSerialSystemDebugger.cpp  taskShowSystemInfo.cpp  taskUpdateScreen.cpp  taskUpdateScreen.h  taskWelcomeScreen.cpp
ArduinoCore-avr/cores/arduino/: Arduino.h  CDC.cpp  main.cpp
ArduinoCore-avr/libraries/Arduino-LiquidCrystal-I2C/: LiquidCrystal_I2C.cpp
ArduinoCore-avr/libraries/FreeRTOS/doc/: tick_sources_timer0.cpp
ArduinoCore-avr/libraries/FreeRTOS/src/: Arduino_FreeRTOS.h  FreeRTOSConfig.h  timers.c  timers.h  variantHooks.cpp
ArduinoCore-avr/libraries/LiquidCrystal_AIP31068/: LiquidCrystal_AIP31068_I2C.h  LiquidCrystal_AIP31068_SPI.h
Media/: DataFlowDiagram.drawio  StartupSequence.drawio  UI_Flow_Chart.drawio
avr_peripherals/board_io/: board_io.c  board_io.h
avr_peripherals/i2c/: i2c.c  i2c.h  i2c_blocking.c  i2c_blocking.h  i2c_common.c  i2c_common.h  i2c_ringbuffer.c  i2c_ringbuffer.h
avr_peripherals/uart/: uart.c  uart.h
docs/html/: _drink_creator6000_8cpp.html  _drink_creator6000_8cpp.js  _drink_creator6000_8cpp__incl.map  _drink_creator6000_8cpp__incl.md5  _drink_creator6000_8cpp_a072d4d1676f1984a7455d8df8ffefd6a_cgraph.map  _drink_creator6000_8cpp_a072d4d1676f1984a7455d8df8ffefd6a_cgraph.md5  _drink_creator6000_8cpp_a0aae5557f8eef2c3e09971114f8ac08c_cgraph.map  _drink_creator6000_8cpp_a0aae5557f8eef2c3e09971114f8ac08c_cgraph.md5  _drink_creator6000_8cpp_a0aae5557f8eef2c3e09971114f8ac08c_icgraph.map  _drink_creator6000_8cpp_a0aae5557f8eef2c3e09971114f8ac08c_icgraph.md5  _drink_creator6000_8cpp_a1015442ac55cc81e8ffbf52a10a1306a_cgraph.map  _drink_creator6000_8cpp_a1015442ac55cc81e8ffbf52a10a1306a_cgraph.md5  _drink_creator6000_8cpp_a1015442ac55cc81e8ffbf52a10a1306a_icgraph.map  _drink_creator6000_8cpp_a1015442ac55cc81e8ffbf52a10a1306a_icgraph.md5  _drink_creator6000_8cpp_a4a59a41d871b92d6f85df4e9093d05e5_cgraph.map  _drink_creator6000_8cpp_a4a59a41d871b92d6f85df4e9093d05e5_cgraph.md5  _drink_creator6000_8cpp_a4a59a41d871b92d6f85df4e9093d05e5_icgraph.map  _drink_creator6000_8cpp_a4a59a41d871b92d6f85df4e9093d05e5_icgraph.md5  _drink_creator6000_8cpp_a5d466c5205576fd46cf42690267b4222_icgraph.map  _drink_creator6000_8cpp_a6acca73f9889e4e88d8eff4cd5f2d362_cgraph.map  _drink_creator6000_8cpp_a6acca73f9889e4e88d8eff4cd5f2d362_cgraph.md5  _drink_creator6000_8cpp_a6acca73f9889e4e88d8eff4cd5f2d362_icgraph.map  _drink_creator6000_8cpp_a6acca73f9889e4e88d8eff4cd5f2d362_icgraph.md5  _drink_creator6000_8cpp_a72f09852161a49627e1fed14f3786dc4_icgraph.map  _drink_creator6000_8cpp_a72f09852161a49627e1fed14f3786dc4_icgraph.md5  _drink_creator6000_8cpp_a840291bc02cba5474a4cb46a9b9566fe_cgraph.map  _drink_creator6000_8cpp_a840291bc02cba5474a4cb46a9b9566fe_cgraph.md5  _drink_creator6000_8cpp_a8a4e90ef3dde8cc3e92007c228867fb6_cgraph.map  _drink_creator6000_8cpp_a8a4e90ef3dde8cc3e92007c228867fb6_cgraph.md5  _drink_creator6000_8cpp_a8a4e90ef3dde8cc3e92007c228867fb6_icgraph.map  _drink_creator6000_8cpp_a8a4e90ef3dde8cc3e92007c228867fb6_icgraph.md5  _drink_creator6000_8cpp_a8b474bc28804b1a6e1dba4f7951657a2_cgraph.map  _drink_creator6000_8cpp_a8b474bc28804b1a6e1dba4f7951657a2_cgraph.md5  _drink_creator6000_8cpp_a8b474bc28804b1a6e1dba4f7951657a2_icgraph.map  _drink_creator6000_8cpp_a8b474bc28804b1a6e1dba4f7951657a2_icgraph.md5  _drink_creator6000_8cpp_a9eabc803df0648f317c9414e1f8f90d6_cgraph.map  _drink_creator6000_8cpp_a9eabc803df0648f317c9414e1f8f90d6_cgraph.md5  _drink_creator6000_8cpp_a9eabc803df0648f317c9414e1f8f90d6_icgraph.map  _drink_creator6000_8cpp_a9eabc803df0648f317c9414e1f8f90d6_icgraph.md5  _drink_creator6000_8cpp_ac3dcb50dc366196efd39a5595307c352_icgraph.map  (+988 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_12.js  defines_13.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  (+80 more)
drivers/: HD44780_I2C.cpp  HD44780_I2C.h  MCP230XX.cpp  MCP230XX.h
include/: DrinkCreator6000_Config.h  DrinkCreator6000_Config_C.h  DrinkCreator6000_DataTypes.h  DrinkCreator6000_EEPROM.h  DrinkCreator6000_Init.h  DrinkCreator6000_Pins.h  DrinkCreator6000_Progmem.h  DrinkCreator6000_RamStats.h  DrinkCreator6000_Tasks.h  FreeRTOSConfig.h  taskErrorHandler.h  taskHardwareControl.h  taskMain.h  taskOrderDrink.h  taskReadInput.h  taskReadTemp.h  taskRegulateTemp.h  taskSelectDrink.h  taskSerialInput.h  taskSerialSystemDebugger.h  taskShowSystemInfo.h  taskTestHardware.h  taskUpdateScreen.h  taskWelcomeScreen.h
linker/: Custom_Linker.ld
src/: DrinkCreator6000.cpp  DrinkCreator6000_Config.cpp  DrinkCreator6000_Config_C.c  DrinkCreator6000_EEPROM.c  DrinkCreator6000_EEPROM.cpp  DrinkCreator6000_Init.cpp  DrinkCreator6000_Progmem.c  DrinkCreator6000_RamStats.c  freertos_hooks.c  taskErrorHandler.cpp  taskHardwareControl.c  taskMain.c  taskMain.cpp  taskOrderDrink.c  taskOrderDrink.cpp  taskReadInput.cpp  taskReadTemp.cpp  taskRegulateTemp.c  taskRegulateTemp.cpp  taskSelectDrink.c  taskSelectDrink.cpp  taskSerialInput.c  taskSerialInput.cpp  taskSerialSystemDebugger.c  taskSerialSystemDebugger.cpp  taskShowSystemInfo.cpp  taskTesthardware.cpp  taskUpdateScreen.cpp  taskWelcomeScreen.cpp
utility/buzzer/: buzzer.c  buzzer.h
utility/debug/: systemDebug.c  systemDebug.h
